# flask-blog

./: .gitignore  Dockerfile  README.md  flask-course terminal codes.txt  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  extensions.py
app/routes/: __init__.py
app/routes/authentication/: __init__.py  web_routes.py
app/routes/core/: __init__.py  web_routes.py
app/routes/default/: __init__.py  web_routes.py
app/routes/error/: __init__.py  web_route.py
app/routes/errors/: __init__.py  web_routes.py
app/routes/post/: __init__.py  web_routes.py
app/routes/user/: __init__.py  web_route.py
app/routes/users/: __init__.py  web_routes.py
app/static/scripts/: custom.js
app/static/styles/: bulma-lists.css  custom.css
app/templates/authentication/: login-form.html  login.html  registration-form.html  registration.html
app/templates/components/: _pagination.html
app/templates/default/: _pagination.html  about.html  home.html  test.html
app/templates/error/: error.html
app/templates/errors/: error.html
app/templates/layout/: _calendar-announcements.html  _flash-messages.html  _link-tags.html  _navigation-bar.html  _side-content.html  base.html
app/templates/post/: _delete-modal.html  _post.html  post-form.html  single-post.html  update-post-form.html
app/templates/user/: account.html  password-reset-form.html  request-password-reset-form.html  update-form.html  user-posts.html
app/utils/: flask-course-terminal-codes.txt  helpers.py  temp.sqlite
migrations/versions/: 82d724acdeeb_followers.py  a6d1eddb261f_.py
(+19 files in other folders)
