## Project Metadata 
[project]
name = "flask-course"
version = "0.1.0"
dependencies = []


## Optional Dependencies
[project.optional-dependencies]
test = []
lint = ["ruff == 0.4.4", "mypy == 1.10.0", "djlint == 1.36.4"]
dev = ["flask-course[test,lint]"]


## Ruff Configuration
[tool.ruff]
lint.select = [
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    "ARG",
    "PTH",
    "TD",
    "FIX",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "FAST",
    "AIR",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "E501",
    "D1",
    "FBT003",
    "D203",
    "D212",
    "D401",
    "S311",
    "PERF401",
    "RET504",
    "FA102",
]
lint.pydocstyle.convention = "google"

## Mypy Configuration
[tool.mypy]
python_version = "3.10"
warn_unreachable = true
allow_redefinition = true
